# api-automation

./: .gitignore  Dockerfile  README.md  logging.yaml  main.py  pyproject.toml  pytest.ini
conf/: env_live.yaml  env_test.yaml
testcase/: conftest.py  test_demo.py
utils/base/: common_util.py  env_conf_util.py  http_util.py  mysql_handler.py  parse.py  req_data.py
utils/business/: path_util.py
